--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<body>
 		<h1> All the power is with in you </h1>
-		<h4>new change in index html file </h4>
+		<h4>new change in index </h4>
 	</body>
 </html>
 
