--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<h4>new change in </h4>
 		<h3>created banch dev</h3>
 		<h4>New change for push and pull</h4>
+		<h4>Edited in repository configurations</h4>
 	</body>
 </html>
 
